--- a/.github/workflows/export-dynamic.yaml
+++ b/.github/workflows/export-dynamic.yaml
@@ -10,6 +10,12 @@ on:
         options:
           - '18.x'
           - '20.x'
+
+      janus-cli-version:
+        description: Version of the janus-idp/cli package.
+        type: string
+        required: false
+        default: '^1.18.0'
       
       upload-project-on-error:
         description: Upload the complete project as a workflow artifact in case of error in order to troubleshoot.
@@ -41,10 +47,13 @@ jobs:
     name: Prepare
     outputs:
       node-version: ${{ steps.set-env-vars.outputs.NODE_VERSION }}
+      janus-cli-version: ${{ steps.set-env-vars.outputs.JANUS_CLI_VERSION }}
       workspaces: ${{ steps.gather-workspaces.outputs.workspaces }}
       upload-project-on-error: ${{ steps.set-env-vars.outputs.UPLOAD_PROJECT_ON_ERROR }}
 
     steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+      
       - name: Set environment variables
         id: set-env-vars
         shell: bash
@@ -53,13 +62,17 @@ jobs:
           then
             echo "NODE_VERSION=${{ github.event.inputs.node-version }}" >> $GITHUB_OUTPUT
             echo "UPLOAD_PROJECT_ON_ERROR='${{ github.event.inputs.upload-project-on-error }}'" >> $GITHUB_OUTPUT
+            echo "JANUS_CLI_VERSION='${{ github.event.inputs.janus-cli-version }}'" >> $GITHUB_OUTPUT
           else
-            echo "NODE_VERSION=20.x" >> $GITHUB_OUTPUT
+            NODE_VERSION=$(cat node-version 2> /dev/null)
+            NODE_VERSION=${NODE_VERSION:-20.x}
+            echo "NODE_VERSION=$NODE_VERSION" >> $GITHUB_OUTPUT
+            JANUS_CLI_VERSION=$(cat janus-cli-version 2> /dev/null)
+            JANUS_CLI_VERSION=${JANUS_CLI_VERSION:-1.18.0}
+            echo "JANUS_CLI_VERSION=$JANUS_CLI_VERSION" >> $GITHUB_OUTPUT
             echo "UPLOAD_PROJECT_ON_ERROR='false'" >> $GITHUB_OUTPUT
           fi
 
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
-      
       - name: Gather workspaces
         id: gather-workspaces
         shell: bash
@@ -109,6 +122,7 @@ jobs:
       overlay-repo: ${{ github.repository }}
       overlay-repo-ref: ${{ github.ref_name }}
       node-version: ${{ needs.prepare.outputs.node-version }}
+      janus-cli-version: ${{ needs.prepare.outputs.janus-cli-version }}
       upload-project-on-error: ${{ needs.prepare.outputs.upload-project-on-error == 'true' }}
 
     permissions:
