--- a/.github/workflows/export-dynamic.yaml
+++ b/.github/workflows/export-dynamic.yaml
@@ -71,7 +71,7 @@ jobs:
     
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
-          ref: ${{ needs.prepare.outputs.overlay-repo-ref }}
+          ref: ${{ steps.set-overlay-repo-ref.outputs.OVERLAY_REPO_REF }}
       
       - name: Set environment variables
         id: set-env-vars
