--- a/.github/workflows/export-dynamic.yaml
+++ b/.github/workflows/export-dynamic.yaml
@@ -1,10 +1,10 @@
 name: Export Dynamic Plugin Packages
 on:
-  workflow_dispatch:
+  workflow_call:
     inputs:
       node-version:
         description: node-version to execute the export
-        required: false
+        required: true
         type: choice
         default: '20.x'
         options:
@@ -14,18 +14,12 @@ on:
       janus-cli-version:
         description: Version of the janus-idp/cli package.
         type: string
-        required: false
+        required: true
         default: '^1.18.0'
 
-      overlay-branch:
-        description: Branch of the overlay structure (current branch by default).
-        type: string
-        required: false
-        default: ''
-      
       upload-project-on-error:
         description: Upload the complete project as a workflow artifact in case of error in order to troubleshoot.
-        required: false
+        required: true
         type: boolean
         default: false
       
@@ -34,13 +28,11 @@ on:
         required: false
         type: string
 
-  push:
-    tags:
-      - "v*.*.*"
-
-  pull_request:
-    branches:
-      - 'releases/**'
+      plugins-repo:
+        description: Target Community Plugins repository to export plugins from
+        type: string
+        required: true
+        default: 'backstage/community-plugins'
 
 concurrency:
   group: ${{ github.workflow }}
@@ -54,57 +46,36 @@ jobs:
     outputs:
       node-version: ${{ steps.set-env-vars.outputs.NODE_VERSION }}
       janus-cli-version: ${{ steps.set-env-vars.outputs.JANUS_CLI_VERSION }}
+      plugins-repo: ${{ steps.set-env-vars.outputs.PLUGINS_REPO }}
       workspaces: ${{ steps.gather-workspaces.outputs.workspaces }}
       upload-project-on-error: ${{ steps.set-env-vars.outputs.UPLOAD_PROJECT_ON_ERROR }}
       overlay-repo-ref: ${{ steps.set-overlay-repo-ref.outputs.OVERLAY_REPO_REF }}
 
     steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
-        if: ${{ github.event.inputs.overlay-branch == '' }} 
-
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
-        if: ${{ github.event.inputs.overlay-branch != '' }} 
-        with:
-          ref: ${{ github.event.inputs.overlay-branch }}
-      
+      - uses: actions/checkout@v4.2.2
       - name: Set overlay_ref
         id: set-overlay-repo-ref 
         run: |
-          if [[ "${{ github.event.inputs.overlay-branch }}" != "" ]]
-          then
-            echo "OVERLAY_REPO_REF=${{ github.event.inputs.overlay-branch }}" >> $GITHUB_OUTPUT
-          else
-            echo "OVERLAY_REPO_REF=${{ github.head_ref || github.ref_name }}" >> $GITHUB_OUTPUT
-          fi
-    
+          echo "OVERLAY_REPO_REF=${{ github.head_ref || github.ref_name }}" >> $GITHUB_OUTPUT
+
       - name: Set environment variables
         id: set-env-vars
         shell: bash
         run: |
-          if [[ "${{  github.event.inputs.node-version }}" != "" ]]
-          then
-            echo "NODE_VERSION=${{ github.event.inputs.node-version }}" >> $GITHUB_OUTPUT
-            echo "UPLOAD_PROJECT_ON_ERROR='${{ github.event.inputs.upload-project-on-error }}'" >> $GITHUB_OUTPUT
-            echo "JANUS_CLI_VERSION=${{ github.event.inputs.janus-cli-version }}" >> $GITHUB_OUTPUT
-          else
-            NODE_VERSION=$(cat node-version 2> /dev/null)
-            NODE_VERSION=${NODE_VERSION:-20.x}
-            echo "NODE_VERSION=$NODE_VERSION" >> $GITHUB_OUTPUT
-            JANUS_CLI_VERSION=$(cat janus-cli-version 2> /dev/null)
-            JANUS_CLI_VERSION=${JANUS_CLI_VERSION:-1.18.0}
-            echo "JANUS_CLI_VERSION=$JANUS_CLI_VERSION" >> $GITHUB_OUTPUT
-            echo "UPLOAD_PROJECT_ON_ERROR='false'" >> $GITHUB_OUTPUT
-          fi
+          echo "NODE_VERSION=${{ github.event.inputs.node-version }}" >> $GITHUB_OUTPUT
+          echo "UPLOAD_PROJECT_ON_ERROR='${{ github.event.inputs.upload-project-on-error }}'" >> $GITHUB_OUTPUT
+          echo "JANUS_CLI_VERSION=${{ github.event.inputs.janus-cli-version }}" >> $GITHUB_OUTPUT
+          echo "PLUGINS_REPO=${{ github.event.inputs.plugins-repo }}" >> $GITHUB_OUTPUT
 
       - name: Gather workspaces
         id: gather-workspaces
         shell: bash
         run: |
-          workspacePath=''
+          workspacePath=''\
           if [[ "${{ github.event.inputs.workspace-path }}" != "" ]]
           then
             workspacePath="${{  github.event.inputs.workspace-path }}"
-          elif [[ "${{ github.event_name }}" == 'pull_request' ]] && [[ "${{ github.head_ref }}" == "workspaces/"* ]]
+          elif [[ "${{ github.head_ref }}" == "workspaces/"* ]]
           then
             workspacePath="$(echo '${{ github.head_ref }}' | sed -e 's:workspaces/[^_]*__\(.*\)$:workspaces/\1:')"
           fi
@@ -139,7 +110,7 @@ jobs:
         workspace: ${{ fromJSON(needs.prepare.outputs.workspaces) }}
 
     with:
-      plugins-repo: backstage/community-plugins
+      plugins-repo: ${{ needs.prepare.outputs.plugins-repo }}
       plugins-repo-ref: ${{ matrix.workspace.plugins-repo-ref }}
       plugins-root: ${{ matrix.workspace.plugins-root }}
       overlay-repo: ${{ github.repository }}
