--- a/.github/workflows/update-plugins-repo-refs.yaml
+++ b/.github/workflows/update-plugins-repo-refs.yaml
@@ -24,7 +24,7 @@ jobs:
           node-version: 20.x
           registry-url: https://registry.npmjs.org/ # Needed for auth
 
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+      - uses: actions/checkout@v4.2.2
 
       - name: Get published community plugins
         id: get-published-community-plugins
@@ -115,7 +115,7 @@ jobs:
 
     steps:
 
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+      - uses: actions/checkout@v4.2.2
 
       - name: Download workspaces json file
         uses: actions/download-artifact@v4
