--- a/.github/workflows/export-dynamic.yaml
+++ b/.github/workflows/export-dynamic.yaml
@@ -5,14 +5,14 @@ on:
       node-version:
         description: node-version to execute the export
         type: string
-        required: true
-        default: '20.x'
+        required: false
+        default: ''
 
       janus-cli-version:
         description: Version of the janus-idp/cli package.
         type: string
-        required: true
-        default: '^1.18.0'
+        required: false
+        default: ''
 
       upload-project-on-error:
         description: Upload the complete project as a workflow artifact in case of error in order to troubleshoot.
@@ -28,8 +28,8 @@ on:
       plugins-repo:
         description: Target Community Plugins repository to export plugins from
         type: string
-        required: true
-        default: 'backstage/community-plugins'
+        required: false
+        default: ''
 
       overlay-branch:
         description: Branch of the overlay structure (current branch by default).
@@ -51,7 +51,6 @@ jobs:
       janus-cli-version: ${{ steps.set-env-vars.outputs.JANUS_CLI_VERSION }}
       plugins-repo: ${{ steps.set-env-vars.outputs.PLUGINS_REPO }}
       workspaces: ${{ steps.gather-workspaces.outputs.workspaces }}
-      upload-project-on-error: ${{ steps.set-env-vars.outputs.UPLOAD_PROJECT_ON_ERROR }}
       overlay-repo-ref: ${{ steps.set-overlay-repo-ref.outputs.OVERLAY_REPO_REF }}
 
     steps:
@@ -77,10 +76,30 @@ jobs:
         id: set-env-vars
         shell: bash
         run: |
-          echo "NODE_VERSION=${{ github.event.inputs.node-version }}" >> $GITHUB_OUTPUT
-          echo "UPLOAD_PROJECT_ON_ERROR='${{ github.event.inputs.upload-project-on-error }}'" >> $GITHUB_OUTPUT
-          echo "JANUS_CLI_VERSION=${{ github.event.inputs.janus-cli-version }}" >> $GITHUB_OUTPUT
-          echo "PLUGINS_REPO=${{ github.event.inputs.plugins-repo }}" >> $GITHUB_OUTPUT
+          if [[ "${{  github.event.inputs.node-version }}" != "" ]]
+          then
+            echo "NODE_VERSION=${{ github.event.inputs.node-version }}" >> $GITHUB_OUTPUT
+          else
+            NODE_VERSION=$(cat node-version 2> /dev/null)
+            NODE_VERSION=${NODE_VERSION:-20.x}
+            echo "NODE_VERSION=$NODE_VERSION" >> $GITHUB_OUTPUT
+          fi
+          if [[ "${{  github.event.inputs.janus-cli-version }}" != "" ]]
+          then
+            echo "JANUS_CLI_VERSION=${{ github.event.inputs.janus-cli-version }}" >> $GITHUB_OUTPUT
+          else
+            JANUS_CLI_VERSION=$(cat janus-cli-version 2> /dev/null)
+            JANUS_CLI_VERSION=${JANUS_CLI_VERSION:-1.13.1}
+            echo "JANUS_CLI_VERSION=$JANUS_CLI_VERSION" >> $GITHUB_OUTPUT
+          fi
+          if [[ "${{  github.event.inputs.plugins-repo }}" != "" ]]
+          then
+            echo "PLUGINS_REPO=${{ github.event.inputs.plugins-repo }}" >> $GITHUB_OUTPUT
+          else
+            PLUGINS_REPO=$(cat plugins-repo 2> /dev/null)
+            PLUGINS_REPO=${PLUGINS_REPO:-backstage/community-plugins}
+            echo "PLUGINS_REPO=$PLUGINS_REPO" >> $GITHUB_OUTPUT
+          fi       
 
       - name: Gather workspaces
         id: gather-workspaces
@@ -132,7 +151,7 @@ jobs:
       overlay-repo-ref: ${{ needs.prepare.outputs.overlay-repo-ref }}
       node-version: ${{ needs.prepare.outputs.node-version }}
       janus-cli-version: ${{ needs.prepare.outputs.janus-cli-version }}
-      upload-project-on-error: ${{ needs.prepare.outputs.upload-project-on-error == 'true' }}
+      upload-project-on-error: ${{ github.event.inputs.upload-project-on-error == 'true' }}
 
     permissions:
       contents: write
