--- a/.github/workflows/export-dynamic-caller.yaml
+++ b/.github/workflows/export-dynamic-caller.yaml
@@ -15,7 +15,7 @@ on:
         description: Version of the janus-idp/cli package.
         type: string
         required: false
-        default: '^1.13.1'
+        default: '^1.18.0'
 
       upload-project-on-error:
         description: Upload the complete project as a workflow artifact in case of error in order to troubleshoot.
@@ -51,11 +51,11 @@ jobs:
   parent_export:
     uses: redhat-developer/rhdh-plugin-export-backstage-community-plugins/.github/workflows/export-dynamic.yaml@main
     with:
-      node-version: ${{ github.event.inputs.node-version }}
-      janus-cli-version: ${{ github.event.inputs.janus-cli-version }}
-      plugins-repo: ${{ github.event.inputs.plugins-repo }}
-      upload-project-on-error: ${{ github.event.inputs.upload-project-on-error == 'true' }}
-      overlay-branch: ${{ github.event.inputs.overlay-branch }}
+      node-version: ${{ inputs.node-version }}
+      janus-cli-version: ${{ inputs.janus-cli-version }}
+      plugins-repo: ${{ inputs.plugins-repo }}
+      upload-project-on-error: ${{ inputs.upload-project-on-error == 'true' }}
+      overlay-branch: ${{ inputs.overlay-branch }}
 
     permissions:
       contents: write
