--- a/.github/workflows/export-dynamic.yaml
+++ b/.github/workflows/export-dynamic.yaml
@@ -16,7 +16,7 @@ on:
 
       upload-project-on-error:
         description: Upload the complete project as a workflow artifact in case of error in order to troubleshoot.
-        required: true
+        required: false
         type: boolean
         default: false
       
@@ -37,10 +37,6 @@ on:
         required: false
         default: ''
 
-concurrency:
-  group: ${{ github.workflow }}
-  cancel-in-progress: true
-
 jobs:
   prepare:
     runs-on: ubuntu-latest
@@ -55,19 +51,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4.2.2
-        if: ${{ github.event.inputs.overlay-branch == '' }} 
+        if: ${{ inputs.overlay-branch == '' }}
 
       - uses: actions/checkout@v4.2.2
-        if: ${{ github.event.inputs.overlay-branch != '' }} 
+        if: ${{ inputs.overlay-branch != '' }}
         with:
-          ref: ${{ github.event.inputs.overlay-branch }}
+          ref: ${{ inputs.overlay-branch }}
 
       - name: Set overlay_ref
         id: set-overlay-repo-ref 
         run: |
-          if [[ "${{ github.event.inputs.overlay-branch }}" != "" ]]
+          if [[ "${{ inputs.overlay-branch }}" != "" ]]
           then
-            echo "OVERLAY_REPO_REF=${{ github.event.inputs.overlay-branch }}" >> $GITHUB_OUTPUT
+            echo "OVERLAY_REPO_REF=${{ inputs.overlay-branch }}" >> $GITHUB_OUTPUT
           else
             echo "OVERLAY_REPO_REF=${{ github.head_ref || github.ref_name }}" >> $GITHUB_OUTPUT
           fi
@@ -76,25 +72,25 @@ jobs:
         id: set-env-vars
         shell: bash
         run: |
-          if [[ "${{  github.event.inputs.node-version }}" != "" ]]
+          if [[ "${{  inputs.node-version }}" != "" ]]
           then
-            echo "NODE_VERSION=${{ github.event.inputs.node-version }}" >> $GITHUB_OUTPUT
+            echo "NODE_VERSION=${{ inputs.node-version }}" >> $GITHUB_OUTPUT
           else
             NODE_VERSION=$(cat node-version 2> /dev/null)
             NODE_VERSION=${NODE_VERSION:-20.x}
             echo "NODE_VERSION=$NODE_VERSION" >> $GITHUB_OUTPUT
           fi
-          if [[ "${{  github.event.inputs.janus-cli-version }}" != "" ]]
+          if [[ "${{  inputs.janus-cli-version }}" != "" ]]
           then
-            echo "JANUS_CLI_VERSION=${{ github.event.inputs.janus-cli-version }}" >> $GITHUB_OUTPUT
+            echo "JANUS_CLI_VERSION=${{ inputs.janus-cli-version }}" >> $GITHUB_OUTPUT
           else
             JANUS_CLI_VERSION=$(cat janus-cli-version 2> /dev/null)
-            JANUS_CLI_VERSION=${JANUS_CLI_VERSION:-1.13.1}
+            JANUS_CLI_VERSION=${JANUS_CLI_VERSION:-1.18.0}
             echo "JANUS_CLI_VERSION=$JANUS_CLI_VERSION" >> $GITHUB_OUTPUT
           fi
-          if [[ "${{  github.event.inputs.plugins-repo }}" != "" ]]
+          if [[ "${{  inputs.plugins-repo }}" != "" ]]
           then
-            echo "PLUGINS_REPO=${{ github.event.inputs.plugins-repo }}" >> $GITHUB_OUTPUT
+            echo "PLUGINS_REPO=${{ inputs.plugins-repo }}" >> $GITHUB_OUTPUT
           else
             PLUGINS_REPO=$(cat plugins-repo 2> /dev/null)
             PLUGINS_REPO=${PLUGINS_REPO:-backstage/community-plugins}
@@ -106,9 +102,9 @@ jobs:
         shell: bash
         run: |
           workspacePath=''
-          if [[ "${{ github.event.inputs.workspace-path }}" != "" ]]
+          if [[ "${{ inputs.workspace-path }}" != "" ]]
           then
-            workspacePath="${{  github.event.inputs.workspace-path }}"
+            workspacePath="${{  inputs.workspace-path }}"
           elif [[ "${{ github.head_ref }}" == "workspaces/"* ]]
           then
             workspacePath="$(echo '${{ github.head_ref }}' | sed -e 's:workspaces/[^_]*__\(.*\)$:workspaces/\1:')"
@@ -151,7 +147,7 @@ jobs:
       overlay-repo-ref: ${{ needs.prepare.outputs.overlay-repo-ref }}
       node-version: ${{ needs.prepare.outputs.node-version }}
       janus-cli-version: ${{ needs.prepare.outputs.janus-cli-version }}
-      upload-project-on-error: ${{ github.event.inputs.upload-project-on-error == 'true' }}
+      upload-project-on-error: ${{ inputs.upload-project-on-error == 'true' }}
 
     permissions:
       contents: write
