--- a/.github/workflows/export-workspaces-as-dynamic.yaml
+++ b/.github/workflows/export-workspaces-as-dynamic.yaml
@@ -1,4 +1,4 @@
-name: Export Workspace as Dynamic Plugins Packages (Caller)
+name: Export Workspace as Dynamic Plugins Packages
 on:
   workflow_dispatch:
     inputs:
