--- a/.github/workflows/update-plugins-repo-refs.yaml
+++ b/.github/workflows/update-plugins-repo-refs.yaml
@@ -32,7 +32,7 @@ jobs:
         run: |
           npm install semver -g
           regexps='@backstage-community\/'
-          npmPackages=`npm search "/^(${regexps})/" --searchlimit=1000 --json --no-description --searchexclude "/^(?\!(${regexps}))/" | jq -r '.[].name' | sort`
+          npmPackages=`npm search "/^(${regexps})/" --searchlimit=1000 --json --no-description --searchexclude "/^(?!(${regexps}))/" | jq -r '.[].name' | sort`
           backstageVersions=$(cat branches.json | jq -r 'to_entries | map(.value)[]')
           plugins=$(
             comma=""
