--- a/.github/workflows/export-workspaces-as-dynamic.yaml
+++ b/.github/workflows/export-workspaces-as-dynamic.yaml
@@ -35,6 +35,12 @@ on:
         required: false
         default: ''
 
+      publish-container:
+        description: Flag to either publish a container image with the dynamic plugin or not
+        type: boolean
+        default: true
+        required: false
+
   push:
     tags:
       - "v*.*.*"
@@ -56,6 +62,7 @@ jobs:
       plugins-repo: ${{ inputs.plugins-repo }}
       upload-project-on-error: ${{ inputs.upload-project-on-error == 'true' }}
       overlay-branch: ${{ inputs.overlay-branch }}
+      publish-container: ${{ publish-container }}
 
     permissions:
       contents: write
